<resources>
    <string name="app_name">TuneLion</string>

    <string name="email_text">e-mail</string>
    <string name="password_text">password</string>
    <string name="confirm_text">Confirm</string>
    <string name="register_text">Register</string>

    <string name="login_text">Login</string>
    <string name="skip_login_text">Skip Login</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_now_playing">NowPlayingActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <color name="light_blue_color">#8282FF</color>
    <color name="light_red_color">#FF7E7E</color>
    <color name="gold_color">#DEBD5C</color>
    <string name="title_activity_music_list">MusicListActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_song_list_view_loader">SongListViewLoader</string>
    <string name="play_text">Play</string>
    <string name="back_text">Back</string>
    <string name="skip_text">Skip</string>
    <string name="loading_album_text">Loading Album Name...</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_song_player">SongPlayerActivity</string>
</resources>
