<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.huscii.ian.tunelion.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:hint="@string/email_text"
        android:id="@+id/email_text"
        android:maxHeight="40dp"
        android:layout_above="@+id/password_text"
        android:layout_centerHorizontal="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:maxWidth="200dp"
        android:hint="@string/password_text"
        android:id="@+id/password_text"
        android:password="true"
        android:maxHeight="40dp"
        android:layout_above="@+id/btn_confirm"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:id="@+id/btn_register"
        android:layout_below="@+id/btn_confirm"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        android:id="@+id/btn_confirm"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp" />

</RelativeLayout>
